Initial work for Verilator support, still pretty sparse and CPU does not boot yet.

--- a/rtl/README
+++ b/rtl/README
@@ -1,6 +1,6 @@
 
 # Check out all the submodules
-git submodule update --init --recursive
+git submodule update --init --recursive --remote
 
 # Generate ROM
 make rom
